# integration-uniplus-erp

./: .env.example  .gitignore  LICENSE  README.md  main.py  nfe_26260324150377000195550010059140681363282161_procNFe.xml  process_xml_files.py  pyproject.toml  requirements.txt  teste_.py
app/: update_prices_api.py
app/worker/: config.py  redis_consumer.py  worker.py
app/worker/handlers/: price_update_handler.py
app/worker/repositories/: mariadb_repository.py
app/worker/services/: product_service.py  uniplus_api.py
app/worker/utils/: logger.py
handlers/: db_connection.py  log_handler.py  nfe_handler.py  nfe_parser.py  query_loader.py
queries/: catalogo.sql  contas_a_pagar.sql  gestao_nfe.sql  icms_daily.sql  movimentacao_daily.sql  movimentacao_estoque.sql  movimentacao_estoque_missing_dates.sql  movimentacao_estoque_unico.sql  notas_fiscais.sql  precos_produtos.sql  schema_mercado.sql  vendas_daily.sql  vendas_daily_missing_dates.sql  vendas_unico.sql  xml_binary_fetch.sql  xml_download_filter.sql
scripts/: audit_movimentacao_estoque.py  backfill_vendas_unico.py
services/: catalogo.py  contas_a_pagar.py  embedding_service.py  movimentacao_estoque.py  nfe_processor.py  notas_fiscais.py  notas_fiscais_download_xml.py  produtos_similares.py  vendas_daily.py  xml_downloader.py
settings/: config_etl.json  db_config.py  queries.json
utils/: data_transformers.py
